# dissipationSML

./: .gitignore  README.md  apply_LEM_final_down.m  apply_LEM_final_down.py  pyproject.toml
dissipationSML/: bg_dissipation.yaml  glider_server.yaml  interactive.py  plotting.ipynb  plotting.mplstyle  plotting.py  reading.py  tools.py  tools_new.py  utilities.py  utilities_new.py
notebooks/: VMP.ipynb  convert_to_OG1.ipynb  dissipation_multiple_gliders.ipynb  dissipation_one_glider.ipynb  load_ERA5.ipynb  load_and_process_gliderdata.ipynb  load_multiple_gliders.ipynb  load_one_gliderdata.ipynb  readme.md
notebooks_new/: process_one_glidermission.ipynb
